--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
@@ -12,17 +12,23 @@
                     <p:panel header="dodawanie nowego rozwiązania umowy">
                         <p:panelGrid columns="2" >
                             <h:outputText value="rozwiązywana umowa: "/>
-                                <h:outputText value="#{rozwiazanieumowyView.nowy.umowa.nrkolejny}"/>
+                                <h:outputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.nrkolejny}"/>
                                 <h:outputText value="umowa od: "/>
-                                <h:outputText value="#{rozwiazanieumowyView.nowy.umowa.dataod}"/>
+                                <h:outputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.dataod}"/>
                                 <h:outputText value="czas trwania: "/>
-                                <h:outputText value="#{rozwiazanieumowyView.nowy.umowa.czastrwania}"/>
+                                <h:outputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.czastrwania}"/>
                                 <h:outputText value="kod umowy: "/>
-                                <h:outputText value="#{rozwiazanieumowyView.nowy.umowa.umowakodzus.kod}"/>
-                                <h:outputText value="data wypowiedzenia: " style="margin-top: 20x;"/>
-                                <p:inputText value="#{rozwiazanieumowyView.nowy.datawypowiedzenia}" size="10" placeholder="____-__-__"/>
+                                <h:outputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.umowakodzus.kod}"/>
+                                <h:outputText value="data dokumentu: " style="margin-top: 30x;"/>
+                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datadokumentu}" size="10" placeholder="____-__-__"/>
+                                <h:outputText value="data wypowiedzenia: " style="margin-top: 30x;"/>
+                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datawypowiedzenia}" size="10" placeholder="____-__-__"/>
+                                <h:outputText value="okres wypowiedzenia upłynia dnia: " />
+                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datauplywuokresuwyp}" size="10" placeholder="____-__-__"/>
                                 <h:outputText value="przyczyna wypowiedzenia: "/>
-                                 <p:selectOneListbox id="pracownik" value="#{rozwiazanieumowyView.nowy.przyczyna}" required="true" requiredMessage="Wybierz sposób rozwiązania"  
+                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.przyczyna}" size="200"/>
+                                <h:outputText value="sposob wypowiedzenia: "/>
+                                <p:selectOneListbox id="pracownik" value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.sposobwypowiedzenia}" required="true" requiredMessage="Wybierz sposób rozwiązania"  
                                                      style="width: 500px;" filter="true" filterMatchMode="contains" scrollHeight="130">
                                      <f:selectItems value="#{wypowiedzenieSposob.getWypowiedzenieSposob()}"
                                                    var="pracownikItem"
@@ -30,7 +36,7 @@
                                     <p:ajax event="change" partialSubmit="true" global="true"/>
                                 </p:selectOneListbox>
                                 <h:outputText value="podstawa prawna: "/>
-                                 <p:selectOneListbox id="podstawa" value="#{rozwiazanieumowyView.nowy.podstawaprawna}" required="true" requiredMessage="Wybierz sposób rozwiązania"  
+                                 <p:selectOneListbox id="podstawa" value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.podstawaprawna}" required="true" requiredMessage="Wybierz sposób rozwiązania"  
                                                      style="width: 1200px;" filter="true" filterMatchMode="contains" scrollHeight="130">
                                      <f:selectItems value="#{wypowiedzeniePodstawa.getWypowiedzeniePodstawa()}"
                                                    var="pracownikItem"
@@ -40,38 +46,43 @@
                                 <h:outputText value="rodzaj wypowiedzenia: "/>
                                 <p:column>
                                     <p:panelGrid columns="2" >
-                                        <h:outputText value="a) wypowiedzenie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.wypowiedzenie}" label="wypowiedzenie"/>
-                                        <h:outputText value="b) rozwiązanie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.rozwiazanie}" label="rozwiązanie"/>
-                                        <h:outputText value="c) porozumienie stron"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.porozumienie}" label="porozumienie"/>
+                                        <h:outputText value="a) wypowiedzenie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.wypowiedzenie}" label="wypowiedzenie"/>
+                                        <h:outputText value="b) rozwiązanie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.rozwiazanie}" label="rozwiązanie"/>
+                                        <h:outputText value="c) porozumienie stron"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.porozumienie}" label="porozumienie"/>
                                     </p:panelGrid>
                                 </p:column>
                                 <h:outputText value="inicjator wypowiedzenia"/>
                                 <p:column>
                                     <p:panelGrid columns="2" >
-                                        <h:outputText value="a) pracodawca"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.pracodawca}"/>
-                                        <h:outputText value="b) pracownik"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.pracownik}"/>
+                                        <h:outputText value="a) pracodawca"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.pracodawca}"/>
+                                        <h:outputText value="b) pracownik"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.pracownik}"/>
                                     </p:panelGrid>
                                 </p:column>
                                 <h:outputText value="okres wypowiedzenia"/>
                                 <p:column>
                                     <p:panelGrid columns="2" >
-                                        <h:outputText value="a) 2 tygodnie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.tygodnie2}"/>
-                                        <h:outputText value="b) miesiąc"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.miesiac1}"/>
-                                        <h:outputText value="c) 3 miesiące"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.nowy.miesiac3}"/>
+                                        <h:outputText value="a) 2 tygodnie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.tygodnie2}"/>
+                                        <h:outputText value="b) miesiąc"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.miesiac1}"/>
+                                        <h:outputText value="c) 3 miesiące"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.miesiac3}"/>
                                     </p:panelGrid>
                                 </p:column>
                                 <h:outputText value="tryb wypowiedzenia"/>
                                 <p:column>
                                     <p:panelGrid columns="2" >
-                                        <h:outputText value="a) bez zach. okr. wyp"/><p:selectBooleanCheckbox label="bez zach. okr. wyp"   value="#{rozwiazanieumowyView.nowy.trybnatychmiastowy}"/>
-                                        <h:outputText value="b) skróc. okr. wyp"/><p:selectBooleanCheckbox label="skróc. okr. wyp"   value="#{rozwiazanieumowyView.nowy.skroceneiokresuwyp}"/>
+                                        <h:outputText value="a) bez zach. okr. wyp"/><p:selectBooleanCheckbox label="bez zach. okr. wyp"   value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.trybnatychmiastowy}"/>
+                                        <h:outputText value="b) skróc. okr. wyp"/><p:selectBooleanCheckbox label="skróc. okr. wyp"   value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.skroceneiokresuwyp}"/>
                                     </p:panelGrid>
                                 </p:column>
                                 <h:outputText value="zwolnienie z ob. pracy" />
-                                <p:selectBooleanCheckbox label="zwolnienie" value="#{rozwiazanieumowyView.nowy.zwolnieniezpracy}"/>
-                            <p:column style="text-align: center; width: 30px;">
-                                <p:commandButton value="dodaj" styleClass="buttonnorm" actionListener="#{rozwiazanieumowyView.dodajnowy()}" update="north, @(form)"/>
-                            </p:column>
+                                <p:selectBooleanCheckbox label="zwolnienie" value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.zwolnieniezpracy}"/>
+                                <p:panelGrid columns="2">
+                                    <p:column style="text-align: center; width: 30px;">
+                                        <p:commandButton value="zachowaj" styleClass="buttonnorm" actionListener="#{rozwiazanieumowyView.dodajnowy()}" update="@(form)"/>
+                                    </p:column>
+                                    <p:column style="text-align: center; width: 30px;">
+                                        <p:commandButton value="drukuj" styleClass="buttonnorm2" actionListener="#{rozwiazanieumowyView.drukujwypowiedzenie()}" />
+                                    </p:column>
+                                </p:panelGrid>
                         </p:panelGrid>
                     </p:panel>
                 </h:form>
