--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -94,7 +94,7 @@
                                 <f:facet name="header">
                                    <h:outputText value="edy."/>
                                </f:facet>
-                               <p:commandButton icon="pi pi-pencil" actionListener="#{rozwiazanieumowyView.edytuj(itemroz)}" update="north, @(form)"/>
+                                <p:commandButton icon="pi pi-pencil" actionListener="#{rozwiazanieumowyView.edytuj(itemroz)}" global="true" update="akordeon:RozwiazaniaNowyForm"/>
                            </p:column>
 
        <!--                    <p:column width="40" style="text-align: center;">
@@ -104,16 +104,16 @@
                                <f:facet name="header">
                                    <h:outputText value="pdf"/>
                                </f:facet>
-                               <p:commandButton icon="pi pi-print"  actionListener="#{rozwiazanieumowyView.drukujwypowiedzenie(itemroz)}" update="north, akordeon:UmowaListForm"/>
+                               <p:commandButton icon="pi pi-print"  actionListener="#{rozwiazanieumowyView.drukujwypowiedzenie(itemroz)}" update="akordeon:UmowaListForm"/>
                            </p:column>
                            <p:column width="40" style="text-align: center;">
                                <f:facet name="header">
                                    <h:outputText value="mail"/>
                                </f:facet>
-                               <p:commandButton icon="pi pi-cloud-upload"  actionListener="#{umowaView.mailUmowaPraca(itemroz)}" update="north akordeon:UmowaListForm"/>
+                               <p:commandButton icon="pi pi-cloud-upload"  actionListener="#{umowaView.mailUmowaPraca(itemroz)}" update="akordeon:UmowaListForm"/>
                            </p:column>
                             <p:column style="text-align: center; width: 30px;">
-                                <p:commandButton icon="pi pi-trash" actionListener="#{rozwiazanieumowyView.usun(itemroz)}" update="north, @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{rozwiazanieumowyView.usun(itemroz)}" update="akordeon:RozwiazaniaListForm"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
