naprawa kopiowanie dokumentow fk do nowego roku

--- a/npkpir_23/web/wspolny/sub/layoutFK/north.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutFK/north.xhtml
@@ -9,7 +9,7 @@
     <p:layoutUnit position="north" size="10 0" resizable="true" closable="true" collapsible="true">
             <h:form>
                 <p:menubar autoDisplay="true">
-                    <p:menuitem icon="ui-icon-folder-open" value="firma" outcome="firmaFK"/>
+                    <p:menuitem icon="ui-icon-folder-open" value="firma" outcome="ksiegowaFKFirma_1"/>
                     <p:menuitem icon="ui-icon-document" value="#{mgs.dokumenty}" outcome="menudokumentyFK"/>
                     <p:menuitem icon="ui-icon-pencil" value="zapisy kont" outcome="raportyFK"/>
                     <p:menuitem icon="ui-icon-contact" value="rejestry" outcome="rejestryFK"/>
