--- a/npkpir_23/web/ksiegowaFK/sub/layoutTablica/north.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/layoutTablica/north.xhtml
@@ -9,7 +9,7 @@
     <p:layoutUnit position="north" size="10 0" resizable="true" closable="true" collapsible="true">
         <h:form  id="menubarnorth">
             <p:menubar autoDisplay="true">
-                <p:menuitem icon="fa fa-institution" value="firma" outcome="firmaFK"  onclick="zajety();"/>
+                <p:menuitem icon="fa fa-institution" value="firma" outcome="ksiegowaFKFirma_1"  onclick="zajety();"/>
                 <p:menuitem icon="fa fa-stack-overflow" value="#{mgs.dokumenty}" outcome="menudokumentyFK"/>
                 <p:menuitem icon="fa fa-sheqel" value="salda kont" outcome="zestawieniaFK"/>
                 <p:menuitem icon="fa fa-tasks" value="VAT" outcome="rejestryFK"/>
