--- a/npkpir_23/web/ksiegowa/sub/dialog_cecha_dokument.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dialog_cecha_dokument.xhtml
@@ -11,7 +11,9 @@
               closeOnEscape="true">
         <h:form id="formCH" >
             <p:dataTable  value="#{DokumentView.pobranecechypodatnik}" var="item"  style="height: 270px; overflow-y: scroll;"
-                          emptyMessage="cechy nie zostały zdefiniowane">
+                          emptyMessage="cechy nie zostały zdefiniowane" rowKey="#{item}" styleClass="walkingtable" >
+                <p:column selectionMode="single" width="20"  styleClass="checkwiersza" style="text-align: center;">
+                </p:column>
                 <p:column headerText="nazwa cechy do wyboru">
                     <h:outputText value="#{item.nazwacechy}"/>
                 </p:column>
@@ -32,7 +34,7 @@
                     <h:outputText value="#{item.rodzajcechy}"/>
                 </p:column>
                 <p:column width="40" style="text-align: center;">
-                    <p:commandButton value="-" actionListener="#{DokumentView.usuncechedodokumentu(item)}" update="formCH dodWiad:panelcechy"/>
+                    <p:commandButton value="-" actionListener="#{DokumentView.usuncechedodokumentu(item)}" update="formCH dodWiad:panelcechy" rendered="#{cechazapisuView.czypokazacceche(item)}"/>
                 </p:column>
             </p:dataTable>
         </h:form>
