--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_dokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_dokument.xhtml
@@ -7,11 +7,15 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace">
 
     <p:dialog id="dialogCechyDokumentu" header="Wykaz bieżących cech dokumentu" widgetVar="dialogCechyDokumentu" resizable="false" 
-              onShow="ustawdialog('dialogCechyDokumentu','dialogpierwszy',500,500);" focus=":formCH" modal="true" appendTo="@(body)"
+              onShow="ustawdialog('dialogCechyDokumentu','dialogpierwszy',500,550);" focus=":formCH" modal="true" appendTo="@(body)"
               closeOnEscape="true">
         <h:form id="formCH" >
             <p:dataTable  value="#{dokfkView.pobranecechypodatnik}" var="item" rows="6" style="height: 270px;"
-                          emptyMessage="cechy nie zostały zdefiniowane">
+                          selection="#{dokfkView.wbranacechawpisywanie}" id="tablicacech"
+                          emptyMessage="cechy nie zostały zdefiniowane" rowKey="#{item}" styleClass="walkingtable" >
+                <p:ajax event="rowSelectRadio" partialSubmit="true"/>
+                <p:column selectionMode="single" width="20"  styleClass="checkwiersza" style="text-align: center;">
+                </p:column>
                 <p:column headerText="nazwa cechy do wyboru">
                     <h:outputText value="#{item.nazwacechy}"/>
                 </p:column>
@@ -24,7 +28,7 @@
             </p:dataTable>
             <p:separator/>
             <p:dataTable  value="#{dokfkView.selected.cechadokumentuLista}" var="item" rows="6" style="height: 170px;"
-                          emptyMessage="dokument bez cech">
+                          emptyMessage="dokument bez cech" id="tablicacech2">
                 <p:column headerText="nazwa cechy przyporządkowanej">
                     <h:outputText value="#{item.nazwacechy}"/>
                 </p:column>
@@ -32,9 +36,15 @@
                     <h:outputText value="#{item.rodzajcechy}"/>
                 </p:column>
                 <p:column width="40" style="text-align: center;">
-                    <p:commandButton value="-" actionListener="#{dokfkView.usuncechedodokumentu(item)}" update="formCH"/>
+                    <p:commandButton value="-" actionListener="#{dokfkView.usuncechedodokumentu(item)}" update="formCH" rendered="#{cechazapisuView.czypokazacceche(item)}"/>
                 </p:column>
             </p:dataTable>
+             <p:outputPanel style="text-align: center;">
+                <p:commandButton value="zapisz wybraną (X)" style="width: 150px;" accesskey="x" actionListener="#{dokfkView.dodajcechedodokumentu()}"
+                                 update="formCH:tablicacech formCH:tablicacech2"/>
+                 <p:commandButton value="zamknij (N)" style="margin-left: 10px;width: 150px;" accesskey="n" 
+                                  oncomplete="PF('dialogCechyDokumentu').hide()"/>
+            </p:outputPanel>
         </h:form>
     </p:dialog>
 </ui:composition> 
