--- a/kadry/src/main/webapp/umowa/index.xhtml
+++ b/kadry/src/main/webapp/umowa/index.xhtml
@@ -71,8 +71,11 @@
                                 <p:tab title="nowe rozwiąz.">
                                     <ui:include src="sub/dane1_edycja_rozwiazania.xhtml"/>
                                 </p:tab>
-                                <p:tab title="świadectwo">
+                                <p:tab title="dane do św.">
                                     <ui:include src="sub/dane1_edycja_swiadectwo.xhtml"/>
+                                </p:tab>
+                                <p:tab title="ekwiwalent">
+                                    <ui:include src="sub/dane1_ekwiwalent_urlop.xhtml"/>
                                 </p:tab>
                                 <p:tab title="św. wydruk">
                                     <ui:include src="sub/dane1_edycja_swiadectwo_wydruk.xhtml"/>
