p-owrot sinkos dkal innych

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -281,7 +281,7 @@
                                     </p:inputText>
                                      <p:inputText id="numer" value="#{dokfkView.selected.nrewidencyjnyfirmy}" 
                                                   style="width: 30px;" rendered="#{WpisView.podatnikObiekt.nip eq '8513036220'}">
-                                    
+                                    </p:inputText>
                                 </p:column>
                                 <p:column>
                                     <p:inputText id="numerwlasny" value="#{dokfkView.selected.numerwlasnydokfk}" style="width: 160px;" valueChangeListener="#{dokfkView.skorygujokreswpisudokumentu}">
