--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -37,21 +37,22 @@
                                 <p:menuitem icon="pi pi-user-minus" value="nieobecności" style="width: 150px" onclick="PF('dialogpracownikanieobecnosci').show()" async="true"/>
                                 <p:menuitem icon="pi pi-user-minus" value="nieobecności zbiorcze" style="width: 150px" onclick="PF('dialogpracownikanieobecnoscizbiorcze').show()" async="true"/>
                                 <p:menuitem icon="pi pi-cloud" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
-                                <p:menuitem icon="pi pi-file-excel" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
-                                <p:menuitem icon="pi pi-file-excel" value="wprowadz. zmiennych" style="width: 150px" onclick="PF('dialogbiorczezmienne').show()" async="true"/>
+                                <p:menuitem icon="pi pi-sitemap" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
+                                <p:menuitem icon="pi pi-money-bill" value="wprowadz. zmiennych" style="width: 150px" onclick="PF('dialogbiorczezmienne').show()" async="true"/>
+                                <p:menuitem icon="pi pi-sliders-h" value="nadgodziny niemcy" style="width: 150px" onclick="PF('dialognadgodzinyniemcy').show()" async="true"/>
                                 <p:menuitem icon="pi pi-file-excel" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-calendar" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
                                 <!--                                <p:menuitem icon="pi pi-calendar" value="paski oddelegowanie" style="width: 150px" onclick="PF('dialogpaskioddeleowanie').show()" async="true"/>-->
                                 <p:menuitem icon="pi pi-calendar" value="oddelegowanie" style="width: 150px" onclick="PF('dialogoddelegowanie').show()" async="true"/>
                             </p:submenu>
                             <p:submenu label="listy płac" style="width: 150px">
-                                <p:menuitem icon="pi pi-ellipsis-v" value="lista rach. um. zleceń" style="width: 150px" onclick="PF('dialoglistarachunekzlecenia').show()" async="true"/>
+                                <p:menuitem icon="pi pi-bars" value="lista rach. um. zleceń" style="width: 150px" onclick="PF('dialoglistarachunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="definicja listy" style="width: 150px" onclick="PF('dialoglistadefinicja').show()" async="true"/>
                                 <p:menuitem icon="pi pi-money-bill" value="lista płac" style="width: 150px" onclick="PF('dialoglistaplac').show()" async="true"/>
-                                <p:menuitem icon="pi pi-money-bill" value="lista płac analiza" style="width: 150px" onclick="PF('dialoglistaplacanaliza').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="karta wynagrodzeń" style="width: 150px" onclick="PF('dialogkartawynagrodzen').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="komornik" style="width: 150px" onclick="PF('dialogkomornik').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="DRA" style="width: 150px" onclick="PF('dialogdra').show()" async="true"/>
+                                <p:menuitem icon="pi pi-eye" value="lista płac analiza" style="width: 150px" onclick="PF('dialoglistaplacanaliza').show()" async="true"/>
+                                <p:menuitem icon="pi pi-table" value="karta wynagrodzeń" style="width: 150px" onclick="PF('dialogkartawynagrodzen').show()" async="true"/>
+                                <p:menuitem icon="pi pi-globe" value="komornik" style="width: 150px" onclick="PF('dialogkomornik').show()" async="true"/>
+                                <p:menuitem icon="pi pi-users" value="DRA" style="width: 150px" onclick="PF('dialogdra').show()" async="true"/>
                             </p:submenu>
                             <p:menuitem icon="pi pi-file-pdf" value="PIT11" style="width: 150px" action="Pit"/>
                             <p:menuitem icon="pi pi-file-excel" value="PIT4" style="width: 150px" action="Pit4"/>
@@ -239,6 +240,7 @@
                 <ui:include src="sub/dialog/dialog_zbiorcze_rachunek_zlecenia.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_wprowadzaniezmiennych.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_zmienne.xhtml"/>
+                <ui:include src="sub/dialog/dialog_nadgodziny_niemcy.xhtml"/>
                 <ui:include src="sub/dialog/dialog_komornik.xhtml"/>
                 <!--                <ui:include src="sub/dialog/dialog_paski_oddelegowanie.xhtml"/>-->
                 <h:form>
