zmiany analiza faktury

--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
@@ -31,6 +31,8 @@
                 </p:selectBooleanCheckbox>
                 <h:outputText value="tylko przeterminowane" style="margin-left: 20px;"/>
                 <p:selectBooleanCheckbox value="#{fakturaRozrachunkiAnalizaView.tylkoprzeterminowane}" style="margin-left: 10px;"/>
+                <h:outputText value="dwa lata" style="margin-left: 20px;"/>
+                <p:selectBooleanCheckbox value="#{fakturaRozrachunkiAnalizaView.pobierzdwalata}" style="margin-left: 10px;"/>
                 <p:commandButton value="bez wezw." actionListener="#{fakturaRozrachunkiAnalizaView.bezwezwania()}"  style="width: 120px; margin-left: 20px;" update="akordeon:fakturaanalizazbiorcza:tablicaanaliza">
                 </p:commandButton>
                 <p:panelGrid columns="2" style="padding: 10px;" id="suma">
