zmiany analiza faktury

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -229,7 +229,7 @@
                             <f:facet name="header">
                                 <h:outputText value=""/>
                             </f:facet>
-                            <h:outputText value="#{itemkalendarz.datastring}"/>
+                            <h:outputText value="#{itemkalendarz.datastring}" style="color: #{itemkalendarz.typdniaCol}"/>
                         </p:column>
                     </p:dataTable>
                     <p:panelGrid columns="10" style="width: 500px;align-content: center; margin-top: 10px;">
