--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo_wydruk.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo_wydruk.xhtml
@@ -9,6 +9,11 @@
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
         <p:outputPanel>
             <h:form styleClass="formumowa" id="SwiadectwoWydrukForm">
+                <h:outputText value="wybrane wypowiedzenie"/>
+                <p:panelGrid columns="2">
+                    <h:outputText value="#{rozwiazanieumowyView.selectedlista.datadokumentu}" rendered="#{rozwiazanieumowyView.selectedlista ne null}"/>
+                    <h:outputText value="nie wybrano rozwiązania umowy" rendered="#{rozwiazanieumowyView.selectedlista eq null}" style="color: red;"/>
+                </p:panelGrid>
                 <p:panel header="Zestawienie danych do świadectwa">
                     <p:commandButton value="druk" styleClass="buttonnorm" actionListener="#{rozwiazanieumowyView.drukujswiadectwo}"/>
                 </p:panel>
